--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -98,6 +98,7 @@ textarea
 .chat-history-panel .chat-history-list .chat-item.danmaku-item .hover-panel
 .tool-bar .share-more
 .tool-bar .mobile-more
+.user-level-detail
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
