--- a/bilibili-lite/src/public/base.styl
+++ b/bilibili-lite/src/public/base.styl
@@ -48,6 +48,9 @@ a span:hover
 .username.is-vip
 	color var(--c-accent) !important
 
+hr
+	border-color var(--c-border) !important
+
 table tr
 	border-color var(--c-border) !important
 	background-color transparent !important
