--- a/bilibili-lite/src/read/info.styl
+++ b/bilibili-lite/src/read/info.styl
@@ -12,6 +12,9 @@
 .bili-dialog-bomb .appeal-box
   background-color var(--c-background)
 
+#article-list-index .index-holder .article-item .point
+  background-color var(--c-border)
+
 .up-info-holder .fixed-box .up-info-block .up-info-right-block .up-name
 #article-list-index .article-list-title
 .article-list-holder-block .article-list-plane .button#article-list-btn .label
@@ -24,9 +27,13 @@
 .article-list-holder-block .article-list-name
 .article-list-holder-block .article-list-plane .button.off .label
 .bili-dialog-bomb .appeal-box .wrap .container .textarea .memo
+.article-action .ops i
   color var(--c-text) !important
 
 .coin-wrap .coin-title i
+.up-info-holder .fixed-box .up-info-block .up-info-right-block .up-name.b-vip-red
+.article-action .ops span:hover>i
+.article-action .ops .share-container a:hover i
   color var(--c-accent) !important
 
 .article-action
@@ -35,6 +42,7 @@
 .article-list-holder-block .article-list-plane .button#article-list-btn .label
 .article-list-holder-block .article-list-plane .button#article-list-btn .title
 .bili-dialog-bomb .appeal-box .wrap .container .options .option .checkbox
+.slim-border:after
   border-color var(--c-border)
 
 .page-container
@@ -66,7 +74,8 @@
   box-shadow none
 
 #article-list-index
-  box-shadow: none
+  border-left 1px solid var(--c-border)
+  box-shadow none
 
 .article-holder .card
   border-color var(--c-border)
@@ -86,5 +95,5 @@
 
 .bili-dialog-bomb .appeal-box .header
 .bili-dialog-bomb .appeal-box .submit
-  border-color: var(--c-border)
-  background-color: var(--c-background)
+  border-color var(--c-border)
+  background-color var(--c-background)
