--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -13,6 +13,7 @@
 .main-container .pay-bar .vip .btn-pay
 .bilibili-player-video-sendbar .bilibili-player-video-inputbar
 .members-info__header
+.bilibili-player .bilibili-player-area .bilibili-player-video-panel
 	background-color var(--c-background) !important
 
 .multi-page .cur-list .list-box li.on
@@ -27,9 +28,14 @@
 	background-color var(--c-hover) !important
 
 .main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
+.bui-switch .bui-body
 	background-color var(--c-border) !important
 
 .bui-slider .bui-track .bui-bar-wrap .bui-bar
+.bui-slider .bui-track .bui-thumb .bui-thumb-dot
+.bui-radio.bui-dark .bui-radio-button .bui-radio-input:checked+.bui-radio-label
+.bui-switch .bui-checkbox:checked+.bui-body
+.bilibili-player-mode-selection-container .bilibili-player-mode-selection-panel .bilibili-player-mode-selection-row .row-selection .selection-span.active[data-type='fontsize']
 	background-color var(--c-accent) !important
 
 .bilibili-player-video-wrap a
@@ -90,8 +96,19 @@ ul.rate-star li i.icon-star-full
 .bilibili-player
 	box-shadow none
 
+.bp-svgicon svg
+	fill var(--c-text)
+
+.bui-switch .bui-dot span svg
+	fill var(--c-border)
+
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active .bp-svgicon
 .bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-spans .display>div.active:hover .bp-svgicon
+.bui-switch .bui-checkbox:checked+.bui-body .bui-dot span svg
+.bilibili-player-video-danmaku-setting:hover>span svg
+.bilibili-player-block-filter-image:hover .bp-svgicon svg
+.bilibili-player-iconfont:hover .bp-svgicon svg
+.selection-icon:hover .bp-svgicon svg
 	fill var(--c-accent)
 
 .bilibili-player-video-sendbar
