--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -8,6 +8,12 @@
 .count-choice .send-btn-animation
 .chat-history-panel .chat-history-list .chat-item.danmaku-item .title-label
 .bottom-actions .left-action
+.user-level-detail:after
+.user-level-detail:before
+.chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-1::before
+.chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-2::before
+.chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-1::after
+.chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-2::after
 	display none !important
 
 .link-footer-vm
@@ -41,16 +47,23 @@
 .sub-tab-box .item.active
 	background-color var(--c-hover) !important
 
+.room-bg::after
+	background-image linear-gradient(0deg, var(--c-background), transparent 20%) !important
+
 .title-length-limit
 .attention-btn-ctnr .right-part
 .gift-info-title
 .tab-box .item .item-cntr
 .fans-medal-item .level
 .recharge-store-box dl.recharge-form dt
+.chaos-pk-rank .rank .rank-name
 	color var(--c-title) !important
 
 .gift-info-desc
 .gift-info-expScore
+.icon-label
+.chaos-pk-rank .rank .season-name
+.chaos-pk-rank .rank .time
 	color var(--c-text) !important
 
 .hour-rank .hour-rank-content
@@ -62,6 +75,8 @@
 .striking
 .item.club-rank-1 .club-name
 .chat-history-panel .chat-history-list .chat-item.welcome-msg .username.vip
+.room-introduction-tags .room-introduction-tag:hover .icon-label
+.chaos-pk-rank .link-to-history
 	color var(--c-accent) !important
 
 .room-introduction-tags
@@ -93,6 +108,10 @@
 .link-navbar .main-ctnr .nav-logo
 	font-size 0 !important
 
+.chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-1
+.chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-2
+	margin 0
+
 .live-room-app .app-content .app-body .section-block
 	margin-bottom 100px
 
@@ -113,12 +132,9 @@
 	height 30px !important
 	background-size 30px !important
 
-.chat-input
-	border 1px solid var(--c-border) !important
-	background-color var(--c-background) !important
-
 .live-room-app .app-content .app-body .player-and-aside-area .aside-area .chat-control-panel
 	border-top 1px solid var(--c-border)
+	box-sizing border-box
 
 .live-room-app .app-content .app-body .section-block .left-container
 	float none
@@ -130,7 +146,7 @@
 .side-bar-cntr
 .count-choice
 .buy-info-box
-	border 0 !important
+	border-color var(--c-border) !important
 	background-color var(--c-background) !important
 
 .video-container
