--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -1,4 +1,8 @@
 /* 顶部导航 */
+.bili-header-m .profile-m .grade .desc-tips .arrow-left
+.dynamic-m .dyn_menu .line:before
+	display: none !important
+
 .channel-menu-mini
 	background-color var(--c-background)
 
@@ -44,10 +48,27 @@
 
 /* 个人弹窗 */
 .van-popper-avatar .level-bar
+.bili-header-m .profile-m .grade .bar
 	background-color var(--c-border) !important
 
+.van-popper-avatar .links .link-item:hover
+.lang-change .lang-item:hover
+.lang-change .lang-intro-item:hover
+	background-color var(--c-hover) !important
+
 .van-popper-avatar .level-bar .level-progress
+.bili-header-m .profile-m .grade .bar .lt
+.bili-header-m .profile-m .grade .bar .rate
 	background-color var(--c-accent) !important
+
+.van-popper-avatar .links .link-title
+.lang-change .lang-title
+.lang-change .lang-intro-item
+	color var(--c-title) !important
+
+.lang-change .lang-intro-item.on
+.bili-header-m .profile-m .grade .desc-tips .lv-row strong
+	color var(--c-accent) !important
 
 .van-popper-avatar .coins
 .van-popper-avatar .counts
@@ -56,27 +77,18 @@
 .van-popper-avatar .coins .contact .contact-tips
 	border-color var(--c-border) !important
 
-.van-popper-avatar .links .link-title
-.lang-change .lang-title
-.lang-change .lang-intro-item
-	color var(--c-title) !important
-
 .van-popper-avatar .level-intro
 .lang-change .lang-intro
 	background-color var(--c-background) !important
 	color var(--c-text) !important
 
-.lang-change .lang-intro-item.on
-	color var(--c-accent) !important
-
-.van-popper-avatar .links .link-item:hover
-.lang-change .lang-item:hover
-.lang-change .lang-intro-item:hover
-	background-color var(--c-hover) !important
-
 .van-popper-avatar .logout a:hover
 .van-popper-avatar .coins .contact .contact-tips
 	background-color var(--c-hover) !important
+	color var(--c-title) !important
+
+.dynamic-m .dyn_list_wrapper .dyn_list li .r .title .uname
+	background-color transparent !important
 	color var(--c-title) !important
 
 /* 消息弹窗 */
@@ -125,6 +137,7 @@
 	color var(--c-title) !important
 
 .video-info .line-2:hover
+.van-popper-favorite .video-panel .play-all .bilifont
 	color var(--c-accent) !important
 
 .duration-tag
@@ -135,7 +148,7 @@
 	border-color var(--c-border) !important
 
 .van-popper-favorite .tab-item--active
-	background-color var(--c-accent) !important
+	background-color var(--c-hover) !important
 	color var(--c-white) !important
 
 .van-popper-favorite .tab-item--normal:hover
@@ -216,6 +229,10 @@
 	background-color var(--c-hover)
 
 /* 顶部搜索框 */
+.bili-header-m .nav-search .nav-search-keyword
+.bili-header-m .profile-m .grade .bar .num
+	background-color transparent !important
+
 .search-submit
 .nav-search-submit
 	background-color transparent !important
