--- a/bilibili-lite/src/read/home.styl
+++ b/bilibili-lite/src/read/home.styl
@@ -14,6 +14,7 @@
 .page-content .right-side .search-module .search-block .search-word-panel .history-item:hover
 .page-content .right-side .search-module .search-block .search-word-panel .suggest-item:hover
 .page-content .left-side .article-list .article-list-holder .article-item:hover
+.nav-tab-bar .tab-item.on
   background-color var(--c-hover)
 
 .page-content .right-side .more .help .info
@@ -30,13 +31,14 @@
   border-color var(--c-border)
 
 .nav-tab-bar
-  top 100px
+  top 145px
 
 .nav-tab-bar .tab-item
   margin-top 0
   margin-right 0
   margin-left -130px
   height 40px
+  text-align center
   line-height 40px
 
 .page-content
@@ -71,8 +73,7 @@
   margin 0
   width 100%
   height 100%
-  background-color transparent
-  color var(--c-title)
+  background-color transparent !important
 
 .page-content .right-side .more
   display -ms-flexbox
