--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -1,4 +1,7 @@
 /* 内容主体 */
+.van-popper-channel .popper__arrow
+	display none !important
+
 .video-card-common .ex-up
 .video-card-common .up
 .article-card .r-con .up
