--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -99,6 +99,7 @@ textarea
 .tool-bar .share-more
 .tool-bar .mobile-more
 .user-level-detail
+.select-option
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -110,6 +111,7 @@ textarea
 .more-ops-list li:hover
 .be-dropdown-item:hover
 .player-auxiliary-area .player-auxiliary-filter .player-auxiliary-setting-menu-wrap .player-auxiliary-setting-menu-list:hover
+.select-wrap .select-option p:hover
   background-color var(--c-hover) !important
 
 .van-popper .popper__arrow
