--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -47,6 +47,11 @@ button
 .btn-box .like
 .gift-package
 .multi-page .cur-list .module-box li.on
+.rollback-btn
+.change-img-btn
+.pagelist .flip-left .active
+.active-main .back-top
+.topic-main .back-top
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -125,6 +130,8 @@ button
 .gift-panel-switch
 .multi-page .cur-list .module-box li
 .recharge-store-box ul.select-list .item
+.pagelist .flip-left span
+.web-notice .more
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
@@ -145,5 +152,6 @@ button
 
 .paging-box-big .dian
 .paging-box-big .dian:hover
+.pagelist .flip-left .ellipsis
   border-color transparent !important
   background-color transparent !important
