--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -39,7 +39,6 @@
 	color var(--c-title) !important
 
 .bili-header-m .nav-search .nav-search-btn
-.international-header .nav-search .nav-search-btn
 .mini-header input
 	background-color transparent !important
 
@@ -68,6 +67,7 @@
 
 .lang-change .lang-intro-item.on
 .bili-header-m .profile-m .grade .desc-tips .lv-row strong
+.out-container .tab-bar .tab-item:hover
 	color var(--c-accent) !important
 
 .van-popper-avatar .coins
