--- a/bilibili-lite/src/v/index.styl
+++ b/bilibili-lite/src/v/index.styl
@@ -4,9 +4,11 @@ url-prefix("https://www.bilibili.com/guochuang/"),
 url-prefix("https://www.bilibili.com/cinema/"),
 url-prefix("https://www.bilibili.com/documentary/"),
 url-prefix("https://www.bilibili.com/movie/"),
-url-prefix("https://www.bilibili.com/tv/") {
+url-prefix("https://www.bilibili.com/tv/"),
+url-prefix("https://www.bilibili.com/blackboard/") {
 	/* 分区主页样式 */
 	@import 'header'
 	@import 'base'
 	@import 'list'
+	@import 'blackboard'
 }
