--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -100,6 +100,7 @@ textarea
 .tool-bar .mobile-more
 .user-level-detail
 .select-option
+.popup-bg-cntr .popup-cntr
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
