--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -46,6 +46,8 @@
 .textarea-container .comm-tool .comm-emoji
 .dynamic-list-item-wrap
 .comment-area .comm-more
+.bb-comment .stick.true-love .medal-level
+.comment-bilibili-fold .stick.true-love .medal-level
 	border-color var(--c-border) !important
 
 .bb-comment .nameplate .nameplate-card .nameplate-text
