--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -39,6 +39,7 @@
 	color var(--c-title) !important
 
 .bili-header-m .nav-search .nav-search-btn
+.international-header .nav-search .nav-search-btn
 .mini-header input
 	background-color transparent !important
 
@@ -69,6 +70,9 @@
 .bili-header-m .profile-m .grade .desc-tips .lv-row strong
 .out-container .tab-bar .tab-item:hover
 	color var(--c-accent) !important
+
+.out-container .tab-bar .active:hover
+	color: var(--c-white) !important
 
 .van-popper-avatar .coins
 .van-popper-avatar .counts
