--- a/bilibili-lite/src/v/blackboard.styl
+++ b/bilibili-lite/src/v/blackboard.styl
@@ -6,7 +6,7 @@
 .box-body
 #webShare .bili-share-pc
 .bili-share-pc .weixin-hover .qr-before
-  background-color: var(--c-background) !important
+  background-color var(--c-background) !important
 
 .active-title .b-active-t
 .pagelist .flip-left .ellipsis
@@ -36,10 +36,10 @@
   margin-bottom 60px !important
 
 .back-top
-  position: fixed !important
+  position fixed !important
 
 .active-main .back-top
-  right: 150px
+  right 150px
 
 button
   background-color transparent !important
