--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -71,6 +71,7 @@ ul.rate-star li i
 .main-container .tool-bar .share-info i
 .main-container .tool-bar .mobile-info i
 .up-info .u-info .name .message i
+.multi-page .head-con .range-box i
 	color var(--c-text) !important
 
 .coin-operated-m .coin-title span
@@ -91,6 +92,7 @@ ul.rate-star li i.icon-star-full
 .video-toolbar .ops>span:hover>i
 .video-toolbar .ops .share .share-pos .box-a .share-down .share-btn:hover i
 .up-info .u-info .name .message:hover i
+.multi-page .head-con .range-box i:hover
 	color var(--c-accent) !important
 
 .bilibili-player
