--- a/bilibili-lite/src/home/header.styl
+++ b/bilibili-lite/src/home/header.styl
@@ -55,7 +55,7 @@
 	width 60px
 	height 50px
 	border-radius 0 25px 25px 0
-	background-color rgba(0, 0, 0, 0.6)
+	background-color rgba(0, 0, 0, 0.6) !important
 
 /* 页眉图片 */
 .bili-banner
